maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: '=' expected but '(' found.
def getBaggleCoords():Array[Int]() = {
                                ^ShortestPathMaze:12: error: illegal start of simple expression
override def run() {
^